# r53-ddns

./: AllowRoute53RecordUpdate.policy  Cargo.toml  README.md  aws.policy  new  r53-ddns.service
src/: dns.rs  main.rs  route53.rs
