[package]
name = "r53-ddns"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-route53 = "1.37.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.11", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
